app/assets/styles/main.scss
@use "./colors";
@use "./misc";

:root {
	color: var(--text);
	font-family: "Segoe UI";

	transition:
		--background-center 0.2s ease,
		--background-edges 0.2s ease,
		--text 0.2s ease;

	&.light {
		--background-center: #{colors.get("light")};
		--background-edges: #{colors.get("gray")};
		--text: #{colors.get("dark")};
	}
}

